--- a/app/templates/transactions.html
+++ b/app/templates/transactions.html
@@ -645,7 +645,7 @@
                         };
 
                     }catch (ex) {
-                        this.error_json_editor = 'Wrong JSON Format: ' + ex;
+                        this.error_json_editor = 'Exception: ' + ex;
                         this.form_step = 1;
                     }
                 },
